-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P5
-
Affects Version/s: 11, 17, 21, 24
-
Component/s: hotspot
-
b05
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8335956 | 23.0.1 | Qizheng Xing | P5 | Resolved | Fixed | b02 |
| JDK-8335988 | 21.0.5 | Qizheng Xing | P5 | Resolved | Fixed | b01 |
| JDK-8337937 | 17.0.13 | Qizheng Xing | P5 | Resolved | Fixed | b02 |
# Internal Error (/root/jdk/src/hotspot/share/utilities/xmlstream.cpp:186), pid=1520448, tid=1520452
# assert(_element_depth > 0) failed: must be in an element to close
Stack: [0x00007ffff59fc000,0x00007ffff5afd000], sp=0x00007ffff5afbc70, free space=1023k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x197e9d3] xmlStream::pop_tag(char const*)+0x1c3 (xmlstream.cpp:186)
V [libjvm.so+0x197f8c3] xmlStream::tail(char const*)+0x13 (xmlstream.cpp:317)
V [libjvm.so+0xdce4ec] IdealGraphPrinter::~IdealGraphPrinter()+0x1c (idealGraphPrinter.cpp:218)
V [libjvm.so+0xdce5ff] IdealGraphPrinter::clean_up()+0x9f (idealGraphPrinter.cpp:106)
V [libjvm.so+0x17d03c7] Threads::destroy_vm()+0x267 (threads.cpp:949)
V [libjvm.so+0xf7571c] jni_DestroyJavaVM+0x9c (jni.cpp:3733)
C [libjli.so+0x455f] JavaMain+0x2bf (java.c:679)
C [libjli.so+0x7cc9] ThreadJavaMain+0x9 (java_md.c:653)
This issue can be reproduced by calling `igv_append` directly, or by calling `Compile::igv_print_method_to_file` with `append` set to true.
This patch fixes the issue.
- backported by
-
JDK-8335956 Fix assertion failure in IdealGraphPrinter when append is true
-
- Resolved
-
-
JDK-8335988 Fix assertion failure in IdealGraphPrinter when append is true
-
- Resolved
-
-
JDK-8337937 Fix assertion failure in IdealGraphPrinter when append is true
-
- Resolved
-
- relates to
-
JDK-8244207 Simplify usage of Compile::print_method() when debugging with gdb and enable its use with rr
-
- Resolved
-
- links to
-
Commit
openjdk/jdk21u-dev/8a0dd936
-
Commit
openjdk/jdk23u/e0dad6d5
-
Commit
openjdk/jdk/6db4c6a7
-
Commit(master)
openjdk/jdk17u-dev/ae7be19a
-
Review
openjdk/jdk/19986
-
Review(master)
openjdk/jdk17u-dev/2657
-
Review(master)
openjdk/jdk21u-dev/816
-
Review(master)
openjdk/jdk23u/14