8335536: Fix assertion failure in IdealGraphPrinter when append is true

Reviewed-by: phh
Backport-of: 6db4c6a772df856fc3099c32a5b2c102a30d360c